@@ -1,6 +1,8 @@
 package com.senai.registro_de_acesso_spring.domain.service;
 
 import com.senai.registro_de_acesso_spring.application.dto.AlunoDTO;
+import com.senai.registro_de_acesso_spring.application.dto.UsuarioDTO;
+import com.senai.registro_de_acesso_spring.domain.entity.usuarios.Usuario;
 import com.senai.registro_de_acesso_spring.domain.entity.usuarios.aluno.Aluno;
 import com.senai.registro_de_acesso_spring.domain.repositories.AlunoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,6 +10,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class AlunoService {
@@ -15,55 +18,42 @@ public class AlunoService {
     private AlunoRepository alunoRepo;
 
     public void cadastrar(AlunoDTO alunoDTO) {
-        Aluno aluno = new Aluno();
-
-        aluno.setNome(alunoDTO.nome());
-        aluno.setCpf(alunoDTO.cpf());
-        aluno.setDataNascimento(alunoDTO.dataNascimento());
-        aluno.setEmail(alunoDTO.email());
-
-        alunoRepo.save(aluno);
+        alunoRepo.save(alunoDTO.fromDTO());
     }
 
     public List<AlunoDTO> listar() {
-        return alunoRepo.findAll().stream().map(aluno -> new AlunoDTO(
-                aluno.getId(),
-                aluno.getNome(),
-                aluno.getCpf(),
-                aluno.getDataNascimento(),
-                aluno.getEmail(),
-                aluno.getTelefone()
-                )).toList();
+        return alunoRepo.findByStatusTrue()
+                .stream().map(AlunoDTO::toDTO)
+                .collect(Collectors.toList());
     }
 
-    public boolean atualizar(Long Id, AlunoDTO alunoDTO) {
-        Optional<Aluno> alunoOpt = alunoRepo.findById(Id);
-
-        if (alunoOpt.isPresent()) {
-            Aluno aluno = alunoOpt.get();
-
-            aluno.setNome(alunoDTO.nome());
-            aluno.setCpf(alunoDTO.cpf());
-            aluno.setTelefone(alunoDTO.telefone());
-            aluno.setDataNascimento(alunoDTO.dataNascimento());
-            aluno.setEmail(alunoDTO.email());
-
+    public boolean atualizar(Long id, AlunoDTO alunoDTO) {
+        return alunoRepo.findById(id).map(aluno -> {
+            Aluno alunoAtualizado = alunoDTO.fromDTO();
+            aluno.setNome(alunoAtualizado.getNome());
+            aluno.setEmail(alunoAtualizado.getEmail());
+            aluno.setDataNascimento(alunoAtualizado.getDataNascimento());
+            aluno.setCpf(alunoAtualizado.getCpf());
+            aluno.setSubTurmas(alunoAtualizado.getSubTurmas());
+            aluno.setOcorrencias(alunoAtualizado.getOcorrencias());
+            aluno.setJustificativas(alunoAtualizado.getJustificativas());
+            aluno.setTelefone(alunoAtualizado.getTelefone());
             alunoRepo.save(aluno);
             return true;
-        }
-        else return false;
+        }).orElse(false);
     }
 
-    public Aluno buscarPorId(Long id) {
-        Optional<Aluno> alunoOpt = alunoRepo.findById(id);
+    public Optional<AlunoDTO> buscarPorId(Long id) {
+        return alunoRepo.findById(id)
+                .filter(Aluno::isStatus)
+                .map(AlunoDTO::toDTO);
+    }
 
-        if (alunoOpt.isPresent()){
-            Aluno aluno = alunoOpt.get();
-            return aluno;
-        } else return null;
-    }   //TODO - Revisar
-
-    public boolean deletar(Long id) {
-        return false;
-    }   //TODO
+    public boolean desativar(Long id) {
+        return alunoRepo.findById(id).map(aluno -> {
+            aluno.setStatus(false);
+            alunoRepo.save(aluno);
+            return true;
+        }).orElse(false);
+    }
 }
